feat(PicoUnitIdController): add reboot proxy endpoint
