# src/modules/pico-units/pico-unit.type.ts
@@ -1,0 +1,1 @@
+export type RebootType = 'soft' | 'hard';
